--- a/web/src/index.prod.html
+++ b/web/src/index.prod.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Marquez</title>
+        <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+        <link rel="icon" href="img/favicon.png" type="image/png">
         <base href="/"/>
         <link
                 href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Karla:400,700&display=swap"
