Build with Node 18 and remove `react-viz` (#2197)
* Allowing to build with node 18. Removing extra library.

* Migration of react-helmet to react-helmet-async.

Co-authored-by: phix <peter.hicks@astronomer.io>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,10 +7,12 @@
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="icon" href="img/favicon.png" type="image/png">
     <base href="/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Karla:400,700&display=swap"
       rel="stylesheet"
     />
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
